feat: added symbol list display
