# server/main.go
@@ -10,8 +10,6 @@ import (
 // @version 1.0
 // @description Backend API for GMarket
 // @host localhost:3000
-// @securityDefinitions.apikey CookieAuth
-// @in cookie
 // @BasePath /api
 func main() {
 	app := fiber.New()
@@ -24,8 +22,8 @@ func main() {
 	app.Mount("/api", api)
 
 	api.Use(cors.New(cors.Config{
-    	// Credentials require a specific origin, NOT "*"
-		AllowOrigins:     "http://localhost:3000, http://localhost:8080", 
+		// Credentials require a specific origin, NOT "*"
+		AllowOrigins:     "http://localhost:3000, http://localhost:8080",
 		AllowCredentials: true,
 		AllowHeaders:     "Origin, Content-Type, Accept, Authorization, Set-Cookie",
 	}))
@@ -33,6 +31,7 @@ func main() {
 	routes.SwaggerRoute(api)
 	routes.SessionRoute(api)
 	routes.UserRoute(api)
+	routes.MarketRoute(api)
 
 	routes.NotFoundRoute(api)
 
